reverted class name to Language (as we did in LoLa)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5972,13 +5972,13 @@ pos=h,
   \PropertyDocumentation{documentation}\ML
   subLogicOf & Logic & Logic
   \PropertyDocumentation{The subject is a sublogic of the object}\ML
-  supportsLogic & OMSLanguage & Logic
+  supportsLogic & Language & Logic
   \PropertyDocumentation{The subject OMS language has a semantics specified in terms of the object logic.}\ML
-  specifiesSemanticsOf & Logic & OMSLanguage
+  specifiesSemanticsOf & Logic & Language
   \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsLogic.}\ML
-  supportsSerialization & OMSLanguage & Serialization
+  supportsSerialization & Language & Serialization
   \PropertyDocumentation{OMS in the subject OMS language can be serialized in the object serialization.  Note that the serialization should be as specific as possible, \ie one should not say that ``OWL can be serialized in XML'' and ``Common Logic can be serialized in XML'', but instead ``OWL can be serialized in OWL/XML'' and ``Common Logic can be serialized in XCL'', taking into account that OWL/XML and XCL are two different XML languages.}\ML
-  serializes & Serialization & OMSLanguage
+  serializes & Serialization & Language
   \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
 }
 
