--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1537,7 +1537,7 @@ explicit references to the logics used.
   \item{W3C/TR REC-rdf11-concepts:2014}{RDF 1.1 Concepts and Abstract Syntax.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}}
   \item{W3C/TR REC-xml-names:2009}{Namespaces in XML 1.0 (Third Edition). W3C Recommendation, 8 December 2009.\\
    \url{http://www.w3.org/TR/2009/REC-xml-names-20091208/}}
-  \item{W3C/TR REC-rdfa-core-20120607}{RDFa Core 1.1.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 07 June 2012.\\ \url{http://www.w3.org/TR/2012/REC-rdfa-core-20120607/}}
+  \item{W3C/TR REC-rdfa-core:2013}{RDFa Core 1.1 -- Second Edition.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 22 August 2013.\\ \url{http://www.w3.org/TR/2013/REC-rdfa-core-20130822/}}
   % This standard has no unique year, as it consist of multiple parts (see http://tools.ietf.org/html/rfc3629#ref-ISO.10646)
   \item{ISO/IEC 10646}{Information technology – Universal Multiple-Octet coded Character Set (UCS)}
   %\item{W3C/TR REC-rdf-sparql-query:2008}{SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
@@ -3775,7 +3775,7 @@ The CURIE abbreviation mechanism works by binding prefixes to IRIs.  A CURIE con
 prefix, the CURIE is valid and expands into a full IRI, which is created by concatenating the IRI 
 bound to the prefix and the reference.
 
-DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core-20120607, Section 6} with the following changes:
+DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core:2013, Section 6} with the following changes:
 \begin{itemize}
 \item DOL does not support the declaration of a ``default prefix'' mapping %\CLnote[type=q-aut]{Are such explanatory notes OK here? --- Yes}
 (covering CURIEs such as \syntax{:name}).
@@ -3963,7 +3963,7 @@ OMSOrMappingorNetworkRef        = IRI ;
 Id                     = Letter , { LetterOrDigit } ;
 \end{lstlisting}
 
-Note that we denote the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core-20120607, Section 6}) by a colon inside the prefix map, but completely omit it in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
+Note that we denote the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core:2013, Section 6}) by a colon inside the prefix map, but completely omit it in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
 
 \vspace{1em}
 
