interoperability (from Michael)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2333,7 +2333,14 @@ interoperability concerning the creation, meaning, computation, use, transfer, a
   \termdefinition{logically interoperable}{property of \termref{structured OMS}, which may be written in different OMS languages\index{OMS language} \markupcomment[author=Christoph Lange,type=todo]{based on different logics\index{logic}}{phrase this more precisely, based on the previously introduced terms}, of being usable jointly in a coherent way (via suitable {OMS language translations}\termref{OMS language translation}), such that the notions of their overall consistency and logical entailment have a precise logical semantics}
 \end{definitions}
 \begin{note}
-TODO Michael: explain the relationship to other notions of interoperability (from existing standards)
+Within ISO 19763 and ISO 20943, metamodel interoperability is
+equivalent to the existence of mappings, which are statements that the
+domains represented by two models intersect and there is a need to
+register details of the correspondence between the structures in the
+models that semantically represent this overlap. Within these
+standards, a model is a representation of some aspect of a domain of
+interest using a normative modelling facility and modelling
+constructs.
 \end{note}
 
 
