ednote: institute leftover

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6109,7 +6109,7 @@ Note that sequences are essentially a non-first-order feature that
 can be expressed in second-order logic.
 
 Model reducts are defined in the following way: 
-Given a signature inclusion $\Sigma'\leq\Sigma$ and a $\Sigma$-model
+Given a signature inclusion\ednote{generalize to morphisms} $\Sigma'\leq\Sigma$ and a $\Sigma$-model
 $I=(\UR,\UD,\rel,\fun,\intCL)$, $I\forget{\Sigma'}=(\UR',\UD,\rel',\fun',\intCL')$ is defined by
 \begin{itemize}
 \item $UR'$ is the restriction of $\UR$ to those elements satisfying the
