--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -4,10 +4,11 @@
 % arara: makeindex 
 % arara: pdflatex: { synctex: on } 
 
-\newcommand{\version}{0.8}
+\newcommand{\version}{0.81}
 
 
 %todo
+% precedences of operators. 'bridge' binds weakest
 % explain: extensions for small additions, unions for sums of large OMS
 % %safe as synonym for %cons
 % in grammar, use NT+
@@ -1539,7 +1540,7 @@ explicit references to the logics used.
   \item{W3C/TR REC-rdf11-concepts:2014}{RDF 1.1 Concepts and Abstract Syntax.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}}
   \item{W3C/TR REC-xml-names:2009}{Namespaces in XML 1.0 (Third Edition). W3C Recommendation, 8 December 2009.\\
    \url{http://www.w3.org/TR/2009/REC-xml-names-20091208/}}
-  \item{W3C/TR REC-rdfa-core-20120607}{RDFa Core 1.1.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 07 June 2012.\\ \url{http://www.w3.org/TR/2012/REC-rdfa-core-20120607/}}
+  \item{W3C/TR REC-rdfa-core:2013}{RDFa Core 1.1 -- Second Edition.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 22 August 2013.\\ \url{http://www.w3.org/TR/2013/REC-rdfa-core-20130822/}}
   % This standard has no unique year, as it consist of multiple parts (see http://tools.ietf.org/html/rfc3629#ref-ISO.10646)
   \item{ISO/IEC 10646}{Information technology – Universal Multiple-Octet coded Character Set (UCS)}
   %\item{W3C/TR REC-rdf-sparql-query:2008}{SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
@@ -2335,7 +2336,14 @@ interoperability concerning the creation, meaning, computation, use, transfer, a
   \termdefinition{logically interoperable}{property of \termref{structured OMS}, which may be written in different OMS languages\index{OMS language} \markupcomment[author=Christoph Lange,type=todo]{based on different logics\index{logic}}{phrase this more precisely, based on the previously introduced terms}, of being usable jointly in a coherent way (via suitable {OMS language translations}\termref{OMS language translation}), such that the notions of their overall consistency and logical entailment have a precise logical semantics}
 \end{definitions}
 \begin{note}
-TODO Michael: explain the relationship to other notions of interoperability (from existing standards)
+Within ISO 19763 and ISO 20943, metamodel interoperability is
+equivalent to the existence of mapping, which are statements that the
+domains represented by two models intersect and there is a need to
+register details of the correspondence between the structures in the
+models that semantically represent this overlap. Within these
+standards, a model is a representation of some aspect of a domain of
+interest using a normative modelling facility and modelling
+constructs.
 \end{note}
 
 
@@ -3465,15 +3473,15 @@ OMS                ::= ExtendingOMS
                      | application SubstName Sentence
 Minimization       ::= MinType CircMin CircVars
 MinType            ::= minimize | maximize | free | cofree
-CircMin            ::= Symbol+
+CircMin            ::= Symbol Symbol*
 CircVars           ::= Symbol*
 Translation        ::= renaming LogicTranslation* [SymbolMapItems]
 LogicTranslation   ::= logic-translation OMSLangTrans
 Reduction          ::= hidden LogicReduction* [SymbolItems]
                      | revealed SymbolItems
 LogicReduction     ::= logic-reduction OMSLangTrans
-SymbolItems        ::= symbol-items Symbol+
-SymbolMapItems     ::= symbol-map-items SymbolOrMap+
+SymbolItems        ::= symbol-items Symbol Symbol*
+SymbolMapItems     ::= symbol-map-items SymbolOrMap SymbolOrMap*
 Extraction         ::= extraction [QualInterfaceSignature]
 Approximation      ::= approximation [QualInterfaceSignature] [LogicRef]
 Filtering          ::= select BasicOMS | reject BasicOMS
@@ -3679,7 +3687,7 @@ complete, meaning that it comprises all answer substitutions to the query.
 
 QueryRelatedDefn ::= QueryDefn | SubstDefn | ResultDefn
 QueryDefn      ::= select-query-defn QueryName Vars Sentence
-                                     OMS [Translation]
+                                     OMS [OMSLangTrans]
 SubstDefn      ::= subst-defn SubstName OMS OMS SymbolMap
 ResultDefn     ::= result-def ResultName SubstName SubstName*
                               QueryName [Complete]
@@ -3766,7 +3774,7 @@ The CURIE abbreviation mechanism works by binding prefixes to IRIs.  A CURIE con
 prefix, the CURIE is valid and expands into a full IRI, which is created by concatenating the IRI 
 bound to the prefix and the reference.
 
-DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core-20120607, Section 6} with the following changes:
+DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core:2013, Section 6} with the following changes:
 \begin{itemize}
 \item DOL does not support the declaration of a ``default prefix'' mapping %\CLnote[type=q-aut]{Are such explanatory notes OK here? --- Yes}
 (covering CURIEs such as \syntax{:name}).
@@ -3954,7 +3962,7 @@ NetworkDefn        ::= NetworkKeyword NetworkName '='
                        [ConsStrength] Network
 NetworkKeyword     ::= 'network'
 NetworkName        ::= IRI
-Network            ::= NetworkElements ExcludeExtensions
+Network            ::= NetworkElements [ExcludeExtensions]
 NetworkElements    ::= NetworkElement ( ',' NetworkElement )*
 NetworkElement     ::= [Id ':'] OMSOrMappingorNetworkRef
 ExcludeExtensions  ::= 'excluding' ExtensionRef ( ',' ExtensionRef )*
@@ -3963,7 +3971,7 @@ Id                 ::= Letter LetterOrDigit*
 \end{lstlisting}
 
 
-Note that we denote the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core-20120607, Section 6}) by a colon inside the prefix map, but completely omit it in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
+Note that we denote the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core:2013, Section 6}) by a colon inside the prefix map, but completely omit it in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
 
 \vspace{1em}
 
@@ -3995,14 +4003,14 @@ MinimizeKeyword  ::= 'minimize'
                    | 'maximize'
                    | 'free'
                    | 'cofree'
-CircMin          ::= Symbol+
-CircVars         ::= 'vars' (Symbol+)
+CircMin          ::= Symbol Symbol*
+CircVars         ::= 'vars' (Symbol Symbol*)
 GroupOMS         ::= '{' OMS '}' | OMSRef
 Translation      ::= 'with' LogicTranslation* SymbolMapItems
-                   | 'with' LogicTranslation+
+                   | 'with' LogicTranslation LogicTranslation*
 LogicTranslation ::= 'translation' OMSLangTrans
 Reduction        ::= 'hide' LogicReduction* SymbolItems
-                   | 'hide' LogicReduction+
+                   | 'hide' LogicReduction LogicReduction*
                    | 'reveal' SymbolItems
 LogicReduction   ::= 'along' OMSLangTrans
 SymbolItems      ::= Symbol ( ',' Symbol )*
@@ -4011,7 +4019,7 @@ Extraction       ::= 'extract' [InterfaceSignature]
                    | 'remove' [InterfaceSignature]
 Approximation    ::= 'forget' InterfaceSignature ['with' LogicRef]
                    | 'keep' InterfaceSignature ['with' LogicRef]
-                   | 'keep' LogicRef
+                   | 'keep' 'with' LogicRef
 Filtering        ::= 'select' BasicOMS | 'reject' BasicOMS
 ExtensionOMS     ::= [ExtConsStrength] [ExtensionName] ExtendingOMS
 ConsStrength     ::= Conservative | '%mono' | '%wdef' | '%def'
@@ -4071,20 +4079,21 @@ IntprDefn          ::= IntprKeyword IntprName [Conservative] ':'
 IntprKeyword       ::= 'interpretation' | 'view' | 'refinement'
 IntprName          ::= IRI
 IntprType          ::= GroupOMS 'to' GroupOMS
-Refinement         ::= OMS
-                     | Network
+Refinement         ::= GroupOMS
+                     | NetworkName
                      | Refinement 'then' Refinement
-                     | OMS 'refined' [RefMap] 'to' Refinement
-                     | Network 'refined' [RefMap] 'to' Refinement
+                     | GroupOMS 'refined' [RefMap] 'to' Refinement
+                     | NetworkName 'refined' [RefMap] 'to' Refinement
 RefMap             ::= 'via' LogicTranslation [SymbolMapItems]
                      | 'via' [LogicTranslation] SymbolMapItems
                      | 'via' NodeMap ( ',' NodeMap )*
 NodeMap            ::= OMSName '|->' OMSName
                        ['using' LogicTranslation* [SymbolMapItems]]
-Entailment         ::= 'entailment' EntailmentName '=' EntailmentType
+Entailment         ::= 'entailment' EntailmentName '='
+                       EntailmentType 'end'
 EntailmentName     ::= IRI
-EntailmentType     ::= GroupOMS 'entails' OMS
-                     | OMSName 'in' Network 'entails' OMS
+EntailmentType     ::= GroupOMS 'entails' GroupOMS
+                     | OMSName 'in' Network 'entails' GroupOMS
                      | Network 'entails' Network
 EquivDefn          ::= 'equivalence' EquivName ':' EquivType 'end'
 EquivName          ::= IRI
@@ -4093,7 +4102,7 @@ EquivType          ::= GroupOMS '<->' GroupOMS '=' OMS
 ModuleRelDefn      ::= 'module' ModuleName [Conservative] ':'
                        ModuleType 'for' InterfaceSignature
 ModuleName         ::= IRI
-ModuleType         ::= OMS 'of' OMS
+ModuleType         ::= GroupOMS 'of' GroupOMS
 AlignDefn          ::= 'alignment' AlignName [AlignCards] ':'
                        AlignType 'end'
                      | 'alignment' AlignName [AlignCards] ':'
@@ -4133,10 +4142,12 @@ Double ::= ($<$ a number $\in [0,1]$ $>$)
 
 QueryRelatedDefn ::= QueryDefn | SubstDefn | ResultDefn
 QueryDefn      ::= 'query' QueryName '=' 'select' Vars 'where' Sentence
-                   'in' OMS ['along' Translation]
-SubstDefn      ::= 'substitution' SubstName ':' OMS 'to' OMS '=' SymbolMap
-ResultDefn     ::= 'result' ResultName SubstName ( ',' SubstName )*
-                   'for' QueryName ['%complete']
+                   'in' GroupOMS ['along' OMSLangTrans] 'end'
+SubstDefn      ::= 'substitution' SubstName ':' GroupOMS 'to'
+                   GroupOMS '=' SymbolMapItems 'end'
+ResultDefn     ::= 'result' ResultName '=' SubstName
+                   ( ',' SubstName )* 'for' QueryName ['%complete']
+                   'end'
 QueryName      ::= IRI
 SubstName      ::= IRI
 ResultName     ::= IRI
@@ -5913,15 +5924,26 @@ caption={LoLa Classes},
 mincapwidth=\textwidth,
 label={tab:logic-vocab-classes},
 pos=h,
-]{lll}{% table footnotes
+]{p{.25\textwidth}p{.45\textwidth}p{.25\textwidth}}{% table footnotes
 }{\FL
   Class & \ClassDocumentation{documentation} & Superclass \ML
   Language & \ClassDocumentation{an OMS language} & \NN
   Logic & \ClassDocumentation{a logic that defines the semantics of an OMS language} & \NN
   Serialization & \ClassDocumentation{a serialization of an OMS language} & \NN
-  Mapping & \ClassDocumentation{a mapping of an OMS language} & \NN
-  Translation & \ClassDocumentation{a mapping of an OMS language} & \NN
-\LL
+  Mapping & \ClassDocumentation{a generic mapping between logics or languages} & \NN
+  LanguageMapping & \ClassDocumentation{a mapping between two languages} & Mapping \NN
+  LogicMapping & \ClassDocumentation{a mapping between two logics} & Mapping \NN
+  Translation & \ClassDocumentation{a translation between logics or, induced, between languages} & Mapping \NN
+  Reduction & \ClassDocumentation{a reduction between logics or, induced, between languages} & Mapping \NN
+  DefaultMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  WeaklyExactMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  ExactMapping & \ClassDocumentation{a default mapping} & WeaklyExactMapping \NN
+  FaithfulMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  ModelExpansiveMapping & \ClassDocumentation{a default mapping} & FaithfulMapping \NN
+  ModelBijectiveMapping & \ClassDocumentation{a default mapping} & ModelExpansiveMapping \NN
+  Embedding & \ClassDocumentation{a default mapping} & ModelBijectiveMapping, LogicMapping, Translation \NN
+  PlainMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  SimpleTheoroidalMapping & \ClassDocumentation{a default mapping} & Mapping \LL
 }
 
 \tref{tab:logic-vocab-prop} lists the properties of the RDF vocabulary for describing OMS languages.  Each row of the table translates into the following RDF triples (given in Turtle serialization):
@@ -5947,13 +5969,13 @@ pos=h,
   \PropertyDocumentation{documentation}\ML
   subLogicOf & Logic & Logic
   \PropertyDocumentation{The subject is a sublogic of the object}\ML
-  supportsLogic & OMSLanguage & Logic
+  supportsLogic & Language & Logic
   \PropertyDocumentation{The subject OMS language has a semantics specified in terms of the object logic.}\ML
-  specifiesSemanticsOf & Logic & OMSLanguage
+  specifiesSemanticsOf & Logic & Language
   \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsLogic.}\ML
-  supportsSerialization & OMSLanguage & Serialization
+  supportsSerialization & Language & Serialization
   \PropertyDocumentation{OMS in the subject OMS language can be serialized in the object serialization.  Note that the serialization should be as specific as possible, \ie one should not say that ``OWL can be serialized in XML'' and ``Common Logic can be serialized in XML'', but instead ``OWL can be serialized in OWL/XML'' and ``Common Logic can be serialized in XCL'', taking into account that OWL/XML and XCL are two different XML languages.}\ML
-  serializes & Serialization & OMSLanguage
+  serializes & Serialization & Language
   \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
 }
 
@@ -6076,7 +6098,7 @@ Note that sequences are essentially a non-first-order feature that
 can be expressed in second-order logic.
 
 Model reducts are defined in the following way: 
-Given a signature inclusion $\Sigma'\leq\Sigma$ and a $\Sigma$-model
+Given a signature inclusion\ednote{generalize to morphisms} $\Sigma'\leq\Sigma$ and a $\Sigma$-model
 $I=(\UR,\UD,\rel,\fun,\intCL)$, $I\forget{\Sigma'}=(\UR',\UD,\rel',\fun',\intCL')$ is defined by
 \begin{itemize}
 \item $UR'$ is the restriction of $\UR$ to those elements satisfying the
