typo: Extraction always needs an interface signature

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3480,7 +3480,7 @@ LogicReduction       = 'logic-reduction' , OMSLangTrans ;
 SymbolItems          = 'symbol-items' , Symbol , { Symbol } ;
 SymbolMapItems       = 'symbol-map-items' , SymbolOrMap , { SymbolOrMap } ;
 
-Extraction           = 'extraction', [ QualInterfaceSignature ] ;
+Extraction           = 'extraction', QualInterfaceSignature ;
 
 Approximation        = 'approximation' , [ QualInterfaceSignature ] , [ LogicRef ] ;
 
@@ -4020,8 +4020,8 @@ LogicReduction       = 'along' , OMSLangTrans ;
 SymbolItems          = Symbol , { ',' , Symbol } ;
 SymbolMapItems       = SymbolOrMap , { ',' , SymbolOrMap } ;
 
-Extraction           = 'extract' , [InterfaceSignature]
-                     | 'remove' , [InterfaceSignature] ;
+Extraction           = 'extract' , InterfaceSignature
+                     | 'remove' , InterfaceSignature ;
 
 Approximation        = 'forget' , InterfaceSignature , [ 'with' , LogicRef ] 
                      | 'keep' , InterfaceSignature , [ 'with' , LogicRef ] 
