keep with -> keep

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4025,7 +4025,7 @@ Extraction           = 'extract' , InterfaceSignature
 
 Approximation        = 'forget' , InterfaceSignature , [ 'with' , LogicRef ] 
                      | 'keep' , InterfaceSignature , [ 'with' , LogicRef ] 
-                     | 'keep' , 'with' , LogicRef ;
+                     | 'keep' , LogicRef ;
 
 Filtering            = 'select' , BasicOMS 
                      | 'reject' , BasicOMS ;
