minor error in the requirements table

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1025,6 +1025,8 @@ Moreover, there is a mechanism for injecting IRIs in existing language serializa
 %
 6.7.(b)	& 
 Proposals should discuss whether the semantics of the metalanguage shall be included into the
+standard
+&
 We have included the DOL metalanguage semantics in this specification. The reasons are discussed
 in the introduction of clause \ref{c:semantics}.
    \\ \hline
