'O keep/forget Sigma keep L'

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4025,8 +4025,8 @@ SymbolMapItems       = SymbolOrMap , { ',' , SymbolOrMap } ;
 Extraction           = 'extract' , InterfaceSignature
                      | 'remove' , InterfaceSignature ;
 
-Approximation        = 'forget' , InterfaceSignature , [ 'with' , LogicRef ] 
-                     | 'keep' , InterfaceSignature , [ 'with' , LogicRef ] 
+Approximation        = 'forget' , InterfaceSignature , [ 'keep' , LogicRef ] 
+                     | 'keep' , InterfaceSignature , [ 'keep' , LogicRef ] 
                      | 'keep' , LogicRef ;
 
 Filtering            = 'select' , BasicOMS 
@@ -4217,6 +4217,10 @@ to
 vars
 view
 with
+keep
+forget
+select
+reject
 }
 
 \sssclause{Key Signs}
