--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3465,7 +3465,7 @@ OMS                  = ExtendingOMS
                      | 'qual-oms' , { Qualification } , OMS
                      | 'bridge' , OMS, { Translation } , ExtendingOMS
                      | 'combination' , Network
-                     | 'application', SubstName, Sentence ;
+                     | 'application', OMS, SubstName ;
 
 Minimization         = MinType, CircMin , CircVars ;
 MinType              = 'minimize' | 'maximize' | 'free' | 'cofree' ;
@@ -3999,7 +3999,7 @@ OMS                 = ExtendingOMS
                      | { Qualification } , ':' , GroupOMS
                      | OMS , 'bridge' , { Translation } , ExtendingOMS 
                      | 'combine' , NetworkElements , [ ExcludeExtensions ]  
-                     | 'apply' , SubstName , Sentence 
+                     | OMS , 'with' , SubstName
                      | GroupOMS ;
 
 Minimization         = MinimizeKeyword , CircMin , [ CircVars ] ;
