translational semantics for UML class diagrams

--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -621,3 +621,18 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   url = {http://CEUR-WS.org/Vol-875},
   keywords = {workshop},
   pubs = {clange,projects/ontoiop}}
+
+@article{Seidewitz08,
+    author = {Seidewitz, Ed},
+    citeulike-article-id = {10316479},
+    journal = {Syntax And Semantics},
+    keywords = {2008, uml},
+    month = aug,
+    number = {August},
+    pages = {1--13},
+    posted-at = {2012-02-05 18:25:13},
+    priority = {2},
+    title = {{Model Semantics and Mathematical Logic}},
+    year = {2008}
+}
+
