--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2,7 +2,7 @@
 % arara: makeindex 
 % arara: pdflatex: { synctex: on } 
 
-\newcommand{\version}{0.81}
+\newcommand{\version}{0.83}
 
 
 %todo
@@ -38,8 +38,8 @@ draft%
 %final,
 ]{scrreprt}
 
-%\usepackage[show]{ed}
-\usepackage[hide]{ed}
+\usepackage[show]{ed}
+%\usepackage[hide]{ed}
 
 %color highlight, for editing
 \usepackage{color}
@@ -276,8 +276,6 @@ author=,date=,id=,replyto=,type=}{}%
 % Font style for syntactic features
 \newcommand*{\syntax}[1]{\texttt{#1}}
 
-% Font for UML
-\newcommand{\uml}[1]{\textsf{#1}}
 
 % requirements (as per Annex H of ISO/IEC Directives, Part 2)
 \newcommand*{\notallowed}{\textbf{not allowed}\xspace}
@@ -485,8 +483,12 @@ author=,date=,id=,replyto=,type=}{}%
     \addtocounter{page}{-1}%
     \newpage}
 
-
-
+%% UML
+\newcommand{\uml}[1]{\textsf{#1}}
+\newcommand{\stereotype}[1]{\uml{\flqq#1\frqq}}
+\newcommand{\aggregation}{\raisebox{0.2pt}{\begin{sideways}\fontsize{6pt}{6pt}\selectfont$\lozenge$\end{sideways}}}
+\newcommand{\composition}{\raisebox{0.2pt}{\begin{sideways}\fontsize{6pt}{6pt}\selectfont$\blacklozenge$\end{sideways}}}
+\newcommand{\Tau}{\mathrm{T}}
 
 \begin{document}
 
@@ -6203,9 +6205,305 @@ such as \texttt{owl:Thing} and \texttt{owl:oneOf}, tailored towards the represen
 \end{definition}
 
 
-\normannex{Conformance of UML class diagrams DOL}\label{a:uml-class}
+\infannex{Conformance of UML class diagrams DOL}\label{a:uml-class}
 
-to be done
+We present a translation of UML class diagrams to Common Logic,
+following the fUML specification and \cite{Seidewitz08}.
+
+From the fUML specification, section 10.3.1, we inherit the axioms for
+primitive types: Booleans, numbers, sequences and strings.  These
+axiomatize (among others) predicates corresponding to primitive types,
+e.g.\ \texttt{buml:Boolean}, \texttt{form:Number},
+\texttt{form:NaturalNumber}, \texttt{buml:Integer},
+\texttt{form:Sequence}, \texttt{form:Character}, and
+\texttt{buml:String}.
+
+
+
+Using this translation, we obtain an institution for UML class diagrams
+as follows:
+
+\smallskip\noindent \textit{Class nets --- Signatures.}  The
+signatures of the UML class diagram institution are given by
+\emph{class nets} $\Sigma = ((C, {\leq_C}), K, P, M, A)$ where $(C,
+{\leq_C})$ describes the \emph{class hierarchy} as a partial order
+which is closed w.r.t.\ to the built-in type $\mathsf{Boolean}$ (i.e.,
+$\mathsf{Boolean} \in C$), and ``downwards'' closed w.r.t.\ the unary
+built-in type formers $\mathsf{List}$ and $\mathsf{Set}$, and the
+binary built-in type former $\mathsf{Pair}$ (i.e., if
+$\mathsf{List}[c] \in C$ or $\mathsf{Set}[c] \in C$, then $c \in C$;
+and if $\mathsf{Pair}[c_1, c_2] \in C$, then $c_1, c_2 \in C$); 
+$K$ fixes the \emph{instance specifications declarations} of the form
+$k : c$ with $c \in C$; $P$ contains the \emph{property declarations}
+of the form $c.p(x_1 : c_1, \dots, x_n : c_n) : c'$ (where we drop the
+parentheses if the property has no arguments); $M$ gives the
+\emph{composition declarations} of the form $c\composition r : c'$;
+and $A$ comprises the \emph{association declarations} of the form
+$a(r_1 : c_1, \dots, r_n : c_n)$.  We require several conditions in
+order to avoid super-types of built-in types and type formers (e.g.,
+forbidding $\mathsf{Boolean} \leq c$ for all $c \neq
+\mathsf{Boolean}$), overriding of declarations, and also that the
+composition declarations are cycle-free: if $c_1\composition r_1 :
+c_2, \dots, c_n\composition r_n : c_{n+1} \in M$, then $c_{n+1} \neq
+c_1$.
+
+\begin{example}\label{ex:dsl-sig}%\pushQED{\qed}%
+\begin{figure}[!tH]
+\centering
+\includegraphics[width=\linewidth]{illustrations/new_uml.png}\\
+\caption{Sample UML class diagram.}
+\label{fig:bjoerners_dsl}
+\end{figure}
+
+The UML class diagram in Fig.~\ref{fig:bjoerners_dsl} leads
+to the following class net:
+%
+\begin{gather*}
+  \text{Classes: } \{ \mathsf{Net}, \mathsf{Station}, \mathsf{Line}, \mathsf{Unit}, \dots, \mathsf{Pair}[\mathsf{Unit}, \mathsf{Path}], \mathsf{List}[\mathsf{Pair}[\mathsf{Unit}, \mathsf{Path}]] \}
+\\
+  \text{Generalisations: } \mathsf{Point} \leq \mathsf{Unit}, \mathsf{Linear} \leq \mathsf{Unit}, \dots, \mathsf{Route} \leq \mathsf{List[Pair[Unit, Path]]}
+\\
+  \text{Properties: } \{\mathsf{Net}.\mathsf{ID} : \mathsf{UID}, \dots, \mathsf{Route}.\mathsf{isOpen}(\mathsf{r} : \mathsf{Route}):\mathsf{Boolean} \}
+\\
+  \text{Compositions: } \{ \mathsf{Station} \composition \mathsf{has} : \mathsf{Unit}, \mathsf{Station} \composition \mathsf{has}: \mathsf{Track}\}
+\\
+  \text{Associations: } \{ \mathsf{stateAt}(\mathsf{unit}: \mathsf{Unit}, \mathsf{state} : \mathsf{UnitState}), \dots \}%\qedhere
+\end{gather*}%\popQED
+\end{example}
+
+A class net morphism $\sigma = (\gamma, \kappa, \pi,\allowbreak \mu,
+\alpha) : \Sigma = ((C, {\leq}_C), K, P, M, A) \to \Tau = ((D,
+{\leq}_D), L, Q,\allowbreak N, B)$ from $\Sigma$ to $\Tau$ consists of
+a monotone map $\gamma$ from $(C, {\leq_C})$ to $(D, {\leq_D})$ which
+is homomorphic w.r.t.\ the type $\mathsf{Boolean}$, and the type
+formers $\mathsf{List}$, $\mathsf{Set}$, and $\mathsf{Pair}$ (i.e.,
+$\gamma(\mathsf{Boolean}) = \mathsf{Boolean}$,
+$\gamma(\mathsf{List}[c]) = \mathsf{List}[\gamma(c)]$,
+$\gamma(\mathsf{Set}[c]) = \mathsf{Set}[\gamma(c)]$, and
+$\gamma(\mathsf{Pair}[c_1, c_2]) = \mathsf{Pair}[\gamma(c_1),
+\gamma(c_2)]$ for all $c, c_1, c_2 \in C$); maps $\kappa$, $\pi$, and
+$\mu$ between the instance specification, property, and composition
+declarations, such that classes are mapped along $\gamma$; and a map
+$\alpha$ from $A$ to $B$ for the association declarations such that
+$n$-ary association declarations are mapped to $n$-ary association
+declarations along $\gamma$, i.e., if $\alpha(a\{ r_1 : c_1, \dots,
+r_n : c_n \}) = b(s_1 : d_1, \dots, s_m : d_m) \in B$, then $m = n$
+and $d_i = \gamma(c_i)$ for all $1 \leq i \leq n$.
+
+For a class net
+$\Sigma = ((C, {\leq_C}), K, P, M, A)$, we define a Common Logic theory
+$CL(\Sigma)$ consisting of:
+%
+\begin{itemize} % [topsep=0pt, label=--, leftmargin=*]
+\item for $c \in C$, a predicate $\CL(c)$,  such that 
+\begin{itemize} % [topsep=0pt, label=--, leftmargin=*]
+\item 
+  $\CL(\mathsf{Boolean}) = \texttt{buml:Boolean}$, 
+\item 
+  $\CL(\mathsf{String}) = \texttt{buml:String}$,
+\item 
+  $\CL(\mathsf{Integer}) = \texttt{buml:Integer}$,
+\item 
+  $\CL(\mathsf{UnlimitedNatural}) = \texttt{form:NaturalNumber}$,
+\item 
+  $\CL(\mathsf{Real}) = \texttt{buml:Real}$,
+\item 
+  $\CL(\mathsf{List}[c]) = \texttt{form:Sequence}$\ednote{UML has typed
+  sequences, but fUML appaerantly not. How do we solve this problem?},
+\item 
+  $\CL(\mathsf{Set}[c]) = ???$\ednote{UML has sets, but fUML appaerantly not. 
+     Do we want to provide our own specification of sets in Common Logic?},
+\item 
+  $\CL(\mathsf{Pair}[c_1,c_2]) = ???$\ednote{UML has pairs, but fUML appaerantly not. 
+     Do we want to provide our own specification of pairs in Common Logic?},
+
+\item for each relation $c_1
+  \leq_C c_2$, an axiom \texttt{(forall (x) (if (C1 x) (C2 x)))},
+  where C1$=\CL(c_1)$, C2$=\CL(c_2)$, 
+\end{itemize}
+
+  \item $\CL$ maps each instance specification declaration ${k : c} \in K$ to constant $\CL(k)$ and an axiom
+\texttt{(c k)}, where by abuse of notation, we identify $c$ with $\CL(c)$, and $k$ with $(\CL(k))$ (this abuse of notation will also be used in the sequel);
+  \item for two instance specifications $k_1 : c$ and $k_2 : c$ with $k_1 \neq
+k_2$, an axiom \texttt{(not (= $k_1$ $k_2$))} (the unique name assumption);
+  \item $\CL$ maps each property declaration $c.p(x_1 : c_1, \dots, x_n : c_n)
+: c' \in P$ to a predicate $\CL(c.p)$ and axioms
+\begin{itemize}
+\item
+\texttt{(forall ($x_1$ $x_2$ $\cdots$  $x_n$ x) (if (c.p $x_1$ $x_2$ $\cdots$  $x_n$ x) ($c_i$ $x_i$))) }
+for each $i=1\ldots n$,\footnote{Note that the $\cdots$ here is meta notation, not a sequence marker!}
+\item 
+\texttt{(forall ($x_1$ $x_2$ $\cdots$  $x_n$ x) (if (c.p $x_1$ $x_2$ $\cdots$  $x_n$ x) ($c'$ $x$))) }
+\item 
+\texttt{(forall ($x_1$ $x_2$ $\cdots$  $x_n$ x y)}\\
+\qquad \texttt{(if (and (c.p $x_1$ $x_2$ $\cdots$  $x_n$ x) (c.p $x_1$ $x_2$ $\cdots$  $x_n$ x)) (= x y))) }
+\end{itemize}
+  \item \CL maps each composition declaration ${c\composition r : c'} \in M$ to
+a predicate $\CL(r)$ and an axiom\\
+\texttt{(forall (x y) (if (r x y) (and (c x) (c' y))))}
+  \item 
+for any pair of composition declarations $c_1\composition r_1 : c_1'$
+and $c_2\composition r_2 : c_2'$, an axiom stating ``each instance has
+at most one owner'':\\
+\texttt{(forall ($x_1$ $x_2$ y) (if (and ($r_1$ $x_1$ y) ($r_2$ $x_2$ y)) (= $x_1$ $x_2$)))}
+  \item \CL maps each association declaration $a(r_1 : c_1, \dots, r_n : c_n)
+\in A$ to a predicate $\CL(a)$ and an axiom\\
+\texttt{(forall ($x_1$ $x_2$ $\cdots$  $x_n$) (if (a $x_1$ $x_2$ $\cdots$  $x_n$) (and ($c_1$ $x_1$) $\cdots$ ($c_n$ $x_n$)))))}
+\end{itemize}
+
+
+
+
+\eat{
+\begin{example}%\pushQED{\qed}%
+%
+An excerpt of an instance net for the class net for
+Fig.~\ref{fig:bjoerners_dsl} is:
+%
+\begin{gather*}
+  \CL(\mathsf{Net}) = \{ \mathtt{LondonUnderground} \}
+\\[-.3ex]
+  \CL(\mathsf{Station}) = \{ \mathtt{CharingCross}, \mathtt{OxfordStreet}, \dots, \mathtt{PicadillyCircus} \}
+\\[-.3ex]
+  \CL(\mathsf{Connector}) = \{ \mathtt{c1}, \mathtt{c2}, \mathtt{c3}, \dots \}
+\\[-.3ex]
+  \CL(\mathsf{Pair}[\mathsf{Connector}, \mathsf{Connector}]) = \{ (\mathtt{c1}, \mathtt{c1}), (\mathtt{c1}, \mathtt{c2}), (\mathtt{c2}, \mathtt{c1}), (\mathtt{c2}, \mathtt{c2}), \dots \}
+\\[-.3ex]
+  \CL(\mathsf{Net}.\mathsf{ID} : \mathsf{UID}) : \CL(\mathsf{Net}) \partialto \CL(\mathsf{UID})\quad\text{where}
+\\[-.5ex]\qquad
+  \mathtt{LondonUnderground} \mapsto \mathtt{\texttt{"}LUG\texttt{"}}\quad\text{etc.}
+\\[-.3ex]
+  \CL(\mathsf{Route}.\mathsf{isOpen} : \mathsf{Boolean}) : \CL(\mathsf{Route}) \partialto \CL(\mathsf{Boolean})\quad\text{where}
+\\[-.5ex]\qquad
+  \mathsf{R1} \mapsto \mathit{tt}\,\text{etc.}
+\\[-.3ex]
+  M^{\mathcal{I}}(\mathsf{Net}\composition\mathsf{has} : \mathsf{Station}) : \CL(\mathsf{Net}) \to \powerset(\CL(\mathsf{Station}))\quad\text{where}
+\\[-.5ex]\qquad
+  \mathsf{LondonUnderground} \mapsto \{ \mathtt{CharingCross}, \dots, \mathtt{PicadillyCircus} \}
+\\[-.3ex]
+  A^{\mathcal{I}}(\mathsf{stateAt}(\mathsf{unit} : \mathsf{Unit}, \mathsf{state} : \mathsf{UnitState})) =
+{}\\[-.5ex]\qquad
+  \{ (\mathtt{LU1}, \{ \mathtt{(c1,c2)} \}), (\mathtt{LU2}, \{ \mathtt{(c2,c3)} \}), \dots \}%\qedhere
+\end{gather*}%\popQED
+\end{example}
+}
+
+It is straightforward to extend $\CL$ from signatures to signature morphisms.
+
+\smallskip\noindent
+\textit{Models.}
+A $\Sigma$-model of the UML class diagram institution is just a
+$\CL(\Sigma)$-model in Common Logic. That is, the UML class diagram
+institution inherits models from Common Logic. Moreover, model reducts
+are inherited as well, using the action of $\CL$ on signature morphisms.
+
+\smallskip\noindent
+\textit{Multiplicity formulae --- Sentences.}
+For the sentences of the UML class diagram institution we use
+\emph{multiplicity formulae} defined by the following grammar:
+%
+\begin{equation*}
+\begin{array}{@{}r@{\ }r@{\ }l@{}}
+  \mathit{Frm} & ::= & \mathit{NumLit}\ \mathsf{\leq}\ \mathit{FunExpr}\ |\ \mathit{FunExpr}\ \mathsf{\leq}\ \mathit{NumLit}\ |\ \mathit{Composition}\ \mathsf{!}
+\\
+  \mathit{FunExpr} & ::= & \mathit{\#}\ \mathit{Composition}\ | \ \mathit{\#}\ \mathit{Association}\ \mathsf{[}\ \mathit{Role} (\mathsf{,}\ \mathit{Role})^*\ \mathsf{]}
+\\
+  \mathit{Composition} & ::= & \mathit{Class}\composition\mathit{Role}\ \mathsf{:}\ \mathit{Class}
+\\
+  \mathit{Association} & ::= & \mathit{Name}\{ \mathit{Role} : \mathit{Class} (\mathsf{,}\ \mathit{Role}\ \mathsf{:}\ \mathit{Class})^* \}
+\\
+  \mathit{Class} & ::= & \mathit{Name}
+\\
+  \mathit{Role} & ::= & \mathit{Name}
+\\
+  \mathit{NumLit} & ::= & \mathsf{0} \mid \mathsf{1} \mid \cdots
+\end{array}
+\end{equation*}
+%
+where $\mathit{Name}$ is a set of strings.  The $\leq$-formulae
+express constraints on the cardinalities of composition and
+association declarations, i.e., how many instances are allowed to be
+in a certain relation with others.  The $\#$-expressions return the
+number of links in an association when some roles are fixed.  The
+$!$-formulae for compositions express that the owning end must not be
+empty.
+%
+The set of sentences or $\Sigma$-\emph{multiplicity constraints}
+$\mathit{Mult}(\Sigma)$ for a class net $\Sigma$ is given by the
+multiplicity formulae in $\mathit{Frm}$ such that all mentioned
+elements of $\mathit{Composition}$ and $\mathit{Association}$
+correspond to composition declarations and association declarations of
+$\Sigma$ respectively, and the $\mathit{Role}$ names mentioned in the
+last clause of $\mathit{FunExpr}$ occur in the mentioned association.
+
+\begin{example}\label{ex:dsl-sen}
+Some of the cardinality constraints of the running example in
+Fig.~\ref{fig:bjoerners_dsl} can be expressed with multiplicity
+formulae as follows:
+%
+\begin{gather*}
+  \mathsf{Station\composition has : Track \,!}
+\\[-.5ex]
+\quad\text{--- each \uml{Track} is owned by a \uml{Station} via \uml{has}},
+\\
+  \mathsf{2 \leq \#has(connector : Connector, unit : Unit)[unit]}
+\\[-.5ex]
+  \quad\text{--- association \uml{has} links each \uml{Unit} to at least two \uml{Connector}s},
+\\
+  \mathsf{\#state(unitState : UnitState, unit : Unit)[unit] = 1}
+\\[-.5ex]
+  \quad\text{--- association \uml{state} links each \uml{Unit} to exactly one \uml{UnitState}}.
+\end{gather*}
+%
+Note we have used formulae with $=$ instead of two formulae with
+$\leq$ where the left hand side and the right hand side are
+switched.\qed
+\end{example}
+
+The \emph{translation} of a formula $\varphi \in
+\mathit{Mult}(\Sigma)$ along a class net morphism $\sigma =
+(\gamma, \kappa, \pi, \mu, \alpha) : \Sigma \to \Tau$, written as
+$\sigma(\varphi)$, is given by applying $\sigma$ to compositions,
+associations, and role names.
+
+\smallskip\noindent
+\textit{Satisfaction relation.}
+TODO
+\eat{
+The $\Sigma$-\emph{satisfaction relation} ${{-} \models_{\Sigma} {-}}
+\subseteq |\mathrm{Inst}(\Sigma)| \times \mathit{Sen}(\Sigma)$ of the
+UML class diagram institution is defined for each $\Sigma$-instance
+net $\mathcal{I} = (\CL, \CL, \CL,
+M^{\mathcal{I}}, A^{\mathcal{I}})$ as
+\begin{gather*}
+  \mathcal{I} \models_{\Sigma} \ell \leq \mathsf{\#}c\composition r \mathrel{\mathsf{:}} c'
+\quad\iff\quad
+  \forall o \in \CL(c) \,.\, \sem{\ell} \leq M^{\mathcal{I}}(c\composition r : c')(o)
+\\
+  \mathcal{I} \models_{\Sigma} \mathsf{\#}c\composition r \mathrel{\mathsf{:}} c' \leq \ell
+\quad\iff\quad
+  \forall o \in \CL(c) \,.\, M^{\mathcal{I}}(c\composition r : c')(o) \leq \sem{\ell}
+\\
+  \mathcal{I} \models_{\Sigma} c\composition r \mathrel{\mathsf{:}} c'\mathsf{!}
+\quad\iff\quad
+  \forall o' \in \CL(c') \,.\, \exists o \in \CL(c) \,.\, M^{\mathcal{I}}(c\composition r : c')(o) = o'
+\\
+  \mathcal{I} \models_{\Sigma} \ell \leq \mathsf{\#}a(r_1 \mathrel{\mathsf{:}} c_1\mathsf{,}\, \dots\mathsf{,}\, r_n \mathrel{\mathsf{:}} c_n)\mathopen{\mathsf{[}}r_{i_1}\mathsf{,}\, \dots\mathsf{,}\, r_{i_m}\mathclose{\mathsf{]}}
+\quad\iff{}\\\quad
+  \forall o_{i_1} \in \CL(c_{i_1}), \dots, o_{i_m} \in \CL(c_{i_m})\,.\,{}
+\\\qquad
+  \sem{\ell} \leq |\{ t \in A^{\mathcal{I}}(a(r_1 : c_1, \dots, r_n : c_n)) \mid t_{i_1} = o_{i_1}, \dots, t_{i_m} = o_{i_m} \}|
+\\
+  \mathcal{I} \models_{\Sigma} \mathsf{\#}a(r_1 \mathrel{\mathsf{:}} c_1\mathsf{,}\, \dots\mathsf{,}\, r_n \mathrel{\mathsf{:}} c_n)\mathopen{\mathsf{[}}r_{i_1}\mathsf{,}\, \dots\mathsf{,}\, r_{i_m}\mathclose{\mathsf{]}} \leq \ell
+\quad\iff{}\\\quad
+  \forall o_{i_1} \in \CL(c_{i_1}), \dots, o_{i_m} \in \CL(c_{i_m})\,.\,{}
+\\\qquad
+  |\{ t \in A^{\mathcal{I}}(a(r_1 : c_1, \dots, r_n : c_n)) \mid t_{i_1} = o_{i_1}, \dots, t_{i_m} = o_{i_m} \}| \leq \sem{\ell}
+\end{gather*}
+%
+where $\sem{-} : \mathit{NumLit} \to \ZZ$ maps a numerical literal
+to an integer.
+}
 
 \normannex{Conformance of CASL with DOL}\label{a:casl}
 
